# windoosh

./: .gitignore  README.md  install_context_menu.reg  package-lock.json  package.json  requested_icons.txt
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: image_processing.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/codecs/: jpeg.rs  mod.rs  png.rs  traits.rs  webp.rs
src/lib/: icons.ts
src/lib/components/: CompareSlider.svelte  ControlPanel.svelte
src/lib/stores/: imageStore.ts  settingsStore.ts
src/routes/: +page.svelte
